<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:layout_margin="30dp">


    <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_login"
            android:textColor="@color/sky_light"
            android:layout_centerHorizontal="true"
            android:textSize="25sp" />

    <RelativeLayout
            android:id="@+id/relative_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundend_corner_bg">

        <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/txt_username" />
    </RelativeLayout>


    <RelativeLayout
            android:id="@+id/relative_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_username"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundend_corner_bg">

        <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/txt_password" />
    </RelativeLayout>

    <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:hint="@string/txt_sign_in"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAllCaps="true"
            android:layout_below="@+id/relative_password"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

    <LinearLayout
            android:id="@+id/sign_in_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_sign_up"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_didnt_have_account"
                android:textSize="14sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sign_up"
                android:textColor="@color/sky_light"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>

