<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/registration_fragment">

    <fragment
        android:id="@+id/registration_fragment"
        android:name="com.scaler.microblogs.ui.registration.RegistrationFragment"
        tools:layout="@layout/fragment_registration">
        <action
                android:id="@+id/action_registration_fragment_to_sign_in_fragment"
                app:destination="@id/sign_in_fragment" />
    </fragment>

    <fragment
            android:id="@+id/sign_in_fragment"
            android:name="com.scaler.microblogs.ui.signin.SignInFragment"
            tools:layout="@layout/fragment_sign_in">
        <action
                android:id="@+id/action_sign_in_fragment_to_registration_fragment"
                app:destination="@id/registration_fragment" />
    </fragment>

    <fragment
            android:id="@+id/nav_feed"
            android:name="com.scaler.microblogs.ui.feed.FeedFragment"
            android:label="@string/title_feed"
            tools:layout="@layout/fragment_feed" />

    <fragment
            android:id="@+id/nav_tags"
            android:name="com.scaler.microblogs.ui.tags.TagsFragment"
            android:label="@string/title_tags"
            tools:layout="@layout/fragment_tags" />

    <fragment
            android:id="@+id/nav_account"
            android:name="com.scaler.microblogs.ui.account.AccountFragment"
            android:label="@string/title_account"
            tools:layout="@layout/fragment_account" />


</navigation>